Updating Nav Bar

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <nav>
         <ul class="main_menu">
           <li><a href=".hero">Home</a></li>
+          <li><a href="register.html">Reserve</a></li>
           <li><a href=".service_area">Activities</a></li>
           <li><a href=".blog_area">Sponsors</a></li>
           <li><a href=".price_area">Packages</a></li>
